styles/main.css
/* Text font */
h1, h2, h3, h4, h5, h6,
.h1, .h2, .h3, .h4, .h5, .h6,
.display-1, .display-2, .display-3, .display-4,
.lead {
  font-family: 'Oswald', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
}

body {
  font-family: 'Open Sans', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
}
/* Text font end*/

/* Override bootstrap */
.row {
  justify-content: center;
}
.container-fluid {
  padding: 0;
}
/* Override bootstrap end*/

/* Colour scheme

  red    cc2936;
  yellow fcca46;
  blue   003d5b;
  gray   eeeeee;
*/
.v-bg-yellow {
  background-color: #fcca46;
}

.v-bg-grey {
  background-color: #e0e0e0;
}

.v-bg-dark {
  background-color: #1b1b1b;
}

/* Tags */
body {
  overflow-x: hidden;
}

a:hover {
  text-decoration: none;
}
/* Tags end */


/* Document wide */
.v-section {
  padding: 5rem 0;
}
/* Document wide end */


/* Landing  */
.v-fullscreen-bg {
  height: 100vh;
  width: 100%;
  position: relative;
  text-align: center;
  background-color: #000;
  background-size: cover;
  background-position: center center;
  background-repeat: no-repeat;
}

.v-logo-box {
  background: #fcca46;
  width: 56px;
  height: 56px;
  margin: 0 auto;
  border-radius: 5px;
}

.v-logo-mr {
  display: inline-block;
  /* transform: rotate(270deg); */
}

.v-logo-v1k {
  line-height: 56px;
}

.v-landing-text {
  text-shadow: 0px 0px 3px #000;
}

.v-landing-btn {
  opacity: 0;
  color: #111;
  background-color: #fcca46;
  border-color: #fcca46;
}

.v-landing-btn:hover {
  color: #111;
  background-color: #ffc107;
  border-color: #ffc107;
  font-weight: 600;
}

.v-landing-btn:focus {
  box-shadow: 0 0 0 0.2rem rgba(255, 193, 7, 0.5);
}

.typed-cursor {
  animation-name: blinker;
  animation-iteration-count: infinite;
  animation-timing-function: cubic-bezier(1,0,0,1);
  animation-duration: 1s;
  display: inline-block;
  width: 2px;
  height: 29px;
  margin-left: 2px;
  background: #fff;
}

@keyframes blinker {
  from { opacity: 1; } to { opacity: 0; }
}

.v-landing-more {
  color: #868e96;
}

.v-landing-arrow {
  stroke: #868e96;
}

.v-landing-more-glob :hover > .v-landing-arrow,
.v-landing-more-glob :hover {
  stroke: #fff;
  color: #fff;
}


/* Landing end */


/* Project start */
.v-project-img {
  border-radius: 6px;
}

.v-project-desc {
  font-size: 14px;
}
/* Project end */

/* Footer */
.v-footer {
  padding: 5rem 0 3rem 0;
}

.v-svg-icon {
  width: 30px;
  height: 30px;
  fill: #868e96;
}

.v-svg-icon:hover {
  transition: all .5s ease-in-out;
  fill: #fff;
}

.v-form-submit-btn {
  cursor: pointer;
}

.v-footer-copyright {
  font-size: 0.9rem;
}
/* Footer end */

/* Media queries */
/* Small devices (landscape phones, 576px and up) */
@media screen and (min-width: 576px) {
  .v-fullscreen-bg {
    background-image:
    radial-gradient(
      rgba(0,0,0,0.1),
      rgba(0,0,0,0.05)
    ),
    url(../images/bg.jpeg);
  }
}
/* Media queries end*/

